--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,14 @@
 @import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css";
-@import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css";
+
+@import "Button.css";
+
+@import "MobileMenu.css";
+
+@import "Header.module.css";
+
+@import "Footer.module.css";
+
+@import "socialmediabar.css";
 
 * {
   box-sizing: border-box;
@@ -13,7 +22,6 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     background-color: #111;
 }
-
 a, a:hover, button:hover {
 	cursor: pointer;
   text-decoration: none;
@@ -27,20 +35,32 @@ section .swiper{
 .swiper-slide:hover {
   z-index: 10
 }
-
+.bannerSlider .swiper-pagination.swiper-pagination-bullets {
+  text-align: right;
+  padding: 0 30px;
+  bottom: 17.5%;
+}
+.bannerSlider .swiper-pagination-bullet {
+  background: #eee;
+}
+.bannerSlider .swiper-pagination-bullet-active {
+  background: #fee000
+}
+.bannerSlider .button2{
+  padding: 12px 36px;
+  font-size: 18px;
+}
 @media all and (max-width: 480px) {
   main {
     margin-top: 80px;
   }
+  .bannerSlider .button2{
+    padding: 5px 15px;
+    font-size: 18px;
+  }
+  .bannerSlider .swiper-pagination.swiper-pagination-bullets {
+    bottom: 0;
+    text-align: center;
+  }
 }
-
-@import "Button.css";
-
-@import "MobileMenu.css";
-
-@import "Header.module.css";
-
-@import "Footer.module.css";
-
-@import "socialmediabar.css";
 
